deploy/argocd/apps/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.liga360.com.ar
      secretName: grafana-tls-secret
  rules:
    - host: grafana.liga360.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: liga360-monitoring-grafana
                port:
                  number: 80
